2006-02-15  Hans-Peter Nilsson  <hp@axis.com>

	PR target/23424
	* config/cris/predicates.md ("cris_bdap_sign_extend_operand"):
	Reenable.

2006-02-14  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/26255
	* pa.md: Create separate HI and QI move patterns for 32-bit and 64-bit
	with hardware float support, and software float support.  Add fcpy
	alternative to hardware patterns.  Add alternatives to copy between
	general and floating-point registers to the 32-bit pattern.
	* pa32-regs.h (VALID_FP_MODE_P): Allow QImode and HImode.
	* pa64-regs.h (VALID_FP_MODE_P): Likewise.

2006-02-14  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	PR bootstrap/26053
	* configure.ac (HAVE_COMDAT_GROUP): Don't assume non-GNU linkers
	support COMDAT group.
	* configure: Regenerate.

2006-02-14  Michael Matz  <matz@suse.de>

	PR middle-end/22275

	* stor-layout.c (layout_decl): Zero-width bitfields aren't
	influenced by maximum_field_alignment or DECL_PACKED.
	(update_alignment_for_field): Ditto.
	(place_field): Ditto.
	* doc/extend.texi (<#pragma pack>, <Type Attributes>): Document
	this behaviour.

2006-02-14  Michael Matz  <matz@suse.de>

	* tree-ssa-structalias.c: Include <params.h>.
	* Makefile.in (tree-ssa-structalias.o): Adjust dependencies.

2006-02-14  Daniel Berlin  <dberlin@dberlin.org>

	Fix PR tree-optimization/26260

	* doc/invoke.texi (max-fields-for-field-sensitive): Document
	param.
	* params.h (MAX_FIELDS_FOR_FIELD_SENSITIVE): New.
	* params.def (PARAM_MAX_FIELDS_FOR_FIELD_SENSITIVE): Ditto.
	* tree-ssa-structalias.c (create_variable_info_for): Use
	MAX_FIELDS_FOR_FIELD_SENSITIVE.
	
2006-02-14  J"orn Rennecke <joern.rennecke@st.com>

	PR target/26141
	* sh.c (sh_gimplify_va_arg_expr): Don't change the result type when
	computing the effective result type.

2006-02-14  J"orn Rennecke <joern.rennecke@st.com>

	PR inline-asm/16194
	* tree.h (decl_overlaps_hard_reg_set_p) Don't declare.
	(tree_overlaps_hard_reg_set): Declare.