@@ -1,3 +1,8 @@
+2006-02-15  J"orn Rennecke <joern.rennecke@st.com>
+
+	PR middle-end/25335
+	* reload1.c (gen_reload): Also use find_replacement in UNARY_P case.
+
 2006-02-15  Hans-Peter Nilsson  <hp@axis.com>
 
 	PR target/23424
